objects/CaseToCaseLineRecordTypes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CaseComment_Record_Type__c</fullName>
        <label>CaseComment Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseLine_Record_Type__c</fullName>
        <label>CaseLine Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Line_Required_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Line Required Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Line_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Line Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Required_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Required Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limit_To_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limit To 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoCaseLineAtCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the system will not allow the user to create Case Line Item records when creating a new Case.</inlineHelpText>
        <label>NoCaseLineAtCreate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Record_Type__c</fullName>
        <label>Task Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CaseToCaseLineRecordTypes</label>
</CustomObject>